OpenAPI: implement per-package search
